# tip-facet

./: CMakeLists.txt  README.md
include/tip/util/: facet.hpp
